--- a/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/TexasHoldEmSim.vcproj
+++ b/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/TexasHoldEmSim.vcproj
@@ -165,15 +165,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\anyoption.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\comp.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\game.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\game.ptr.cpp"
 				>
 			</File>
 			<File
@@ -189,6 +189,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\main.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\state.cpp"
 				>
 			</File>
@@ -199,6 +203,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\anyoption.h"
+				>
+			</File>
+			<File
 				RelativePath=".\card.h"
 				>
 			</File>
@@ -208,10 +216,6 @@
 			</File>
 			<File
 				RelativePath=".\game.h"
-				>
-			</File>
-			<File
-				RelativePath=".\game.ptr.h"
 				>
 			</File>
 			<File
@@ -227,19 +231,9 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Round.h"
-				>
-			</File>
-			<File
 				RelativePath=".\state.h"
 				>
 			</File>
-		</Filter>
-		<Filter
-			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
-			>
 		</Filter>
 	</Files>
 	<Globals>
