--- a/trunk/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/TexasHoldEmSim.vcproj
+++ b/trunk/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/TexasHoldEmSim.vcproj
@@ -169,6 +169,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\card.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\comp.cpp"
 				>
 			</File>
