Added API comments, and main now reads in a configuration file. (Doesn't set the appropriate values anywhere yet, tho).

--- a/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/TexasHoldEmSim.vcproj
+++ b/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/TexasHoldEmSim.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\round.h"
+				>
+			</File>
+			<File
 				RelativePath=".\state.h"
 				>
 			</File>
