--- a/trunk/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/TexasHoldEmSim.vcproj
+++ b/trunk/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/TexasHoldEmSim.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\round.h"
+				>
+			</File>
+			<File
 				RelativePath=".\state.h"
 				>
 			</File>
