--- a/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/simulation.ini
+++ b/Texas Holdem Sim/TexasHoldEmSim/TexasHoldEmSim/simulation.ini
@@ -1,7 +1,4 @@
-Number of players: 3
-Player difficulty : 5
-Buy in : 500
-Big blind : 10
-Small blind : 5
-Blind timer : 5
-Dealer : Comp1
+Players : 5
+Money : 1500
+Small Blind : 5
+Dealer : 1
